--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,15 +8,9 @@
                     <a href="<%= user_path(friend.id) %>">
                         <div class="columns is-mobile is-centered">
                             <div class="column is-narrow">
-                                <% if friend.profile_picture.attached? %>
-                                    <figure class="image is-64x64 level-item">
-                                        <%= image_tag(friend.profile_picture.variant(resize_to_fill: [64, 64]), class: "is-rounded") %>
-                                    </figure>
-                                <% else %>
-                                        <figure class="image is-64x64 level-item">
-                                        <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
-                                    </figure>
-                                <% end %>
+                                <figure class="image is-64x64 level-item">
+                                    <%= image_tag friend.primary_profile_picture, class: "is-rounded" %>
+                                </figure>
                             </div>
                         </div>
 
