--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -42,6 +42,12 @@
             <div class="container box has-text-centered">
                 <p class="title">Friends</p>
 
+                <% if @user.friends.none? %>
+                    <p>Looks like you don't have any friends yet...</p>
+                    <br>
+                    <a href="<%= users_path %>" class="button is-link">Let's fix that!</a>
+                <% end %>
+
                 <% @user.friends.each do |friend| %>
                     <a href="<%= user_path(friend.id) %>">
                         <div class="columns is-mobile is-centered">
@@ -134,6 +140,12 @@
             <div class="container has-text-centered">
                 <div class="box">
                     <div class="title">Posts</div>
+
+                    <% if @user.posts.none? %>
+                        <p>Need some inspiration for a post?</p>
+                        <br>
+                        <a href="<%= posts_path %>" class="button is-link">Let's go!</a>
+                    <% end %>
 
                     <% @user.posts.each do |post| %>
                         <div class="box">
